--- a/html/window_size.html
+++ b/html/window_size.html
@@ -14,11 +14,21 @@
                 margin-top: 20px;
                 font-size: 40px ;
             }
+            .heading_test{
+                width: 100%;
+                height: 300px;
+                background-image:url(/asset/1.svg) ;
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center;
+
+            }
 
 
         </style>
     </head>
     <body>
+    <div class="heading_test"></div>
         <div class="tag">Window Size</div>
         <h1> this is the title.</h1>
         <p>hello, this is the paragraph.</p>
