--- a/html/findBunny.html
+++ b/html/findBunny.html
@@ -50,7 +50,7 @@
     let button = document.querySelector("button")
 
     button.addEventListener('click',()=>{
-        bunny.scrollIntoView({behavior:"smooth"});
+        bunny.scrollIntoView({behavior:"smooth",block:"center"});
     })
 
 </script>
