--- a/html/007_find_Nodes.html
+++ b/html/007_find_Nodes.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="/js/007.js"></script>
+    <script src="/js/007.js" defer></script>
     <link rel="stylesheet" href="/css/007.css">
     <title>Document</title>
 </head>
