html for shoppinglist

--- a/html/Shopping.html
+++ b/html/Shopping.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="/css/shopping.css">
 </head>
 <body>
+<section class="list">
+    <header class="header"></header>
+    <ul class="items"></ul>
+    <footer class="footer"></footer>
+</section>
 
 </body>
 </html>
