shopping list html

--- a/html/Shopping.html
+++ b/html/Shopping.html
@@ -7,13 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="/js/shopping" defer></script>
+    <script src="https://kit.fontawesome.com/f98b77bf40.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="/css/shopping.css">
 </head>
 <body>
 <section class="list">
     <header class="header"></header>
-    <ul class="items"></ul>
-    <footer class="footer"></footer>
+    <ul class="items">
+        <li class="item_row"></li>
+    </ul>
+    <footer class="footer">
+        <input type="text" class="footer_input">
+        <button class="footer_button">
+            <i class="fa-solid fa-plus"></i>
+        </button>
+    </footer>
+
 </section>
 
 </body>
