shopping list html

--- a/html/Shopping.html
+++ b/html/Shopping.html
@@ -15,7 +15,14 @@
 <section class="list">
     <header class="header"></header>
     <ul class="items">
-        <li class="item_row"></li>
+        <li class="item_row">
+            <div class="item">
+                <span class="item_name">Egg</span>
+                <button class="item_delete">
+                    <i class="fa-solid fa-plus"></i>
+                </button>
+            </div>
+        </li>
     </ul>
     <footer class="footer">
         <input type="text" class="footer_input">
