--- a/html/Shopping.html
+++ b/html/Shopping.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <section class="list">
-    <header class="header"></header>
+    <header class="header">Shopping List</header>
     <ul class="items">
         <li class="item_row">
             <div class="item">
