--- a/html/Shopping.html
+++ b/html/Shopping.html
@@ -13,15 +13,16 @@
 </head>
 <body>
 <section class="list">
-    <header class="header">Shopping List</header>
+    <header class="header">Shopping List </header>
     <ul class="items">
         <li class="item_row">
             <div class="item">
                 <span class="item_name">Egg</span>
                 <button class="item_delete">
-                    <i class="fa-solid fa-plus"></i>
+                    <i class="fa-solid fa-trash-can"></i>
                 </button>
             </div>
+            <div class="divider"></div>
         </li>
     </ul>
     <footer class="footer">
