--- a/html/Shopping.html
+++ b/html/Shopping.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="/js/shopping" defer></script>
+    <script src="/js/shopping.js" defer></script>
     <script src="https://kit.fontawesome.com/f98b77bf40.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="/css/shopping.css">
